--- a/package.json
+++ b/package.json
@@ -65,5 +65,14 @@
   ],
   "directories": {
     "test": "test"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lisagorewitdecker/algochat.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/lisagorewitdecker/algochat/issues"
+  },
+  "homepage": "https://github.com/lisagorewitdecker/algochat#readme"
 }
