--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "algochat-react-js",
   "version": "1.0.0",
-  "description": "<div style=\"width:100%\"> \t<div style=\"width:50%; display:inline-block\"> \t\t<p align=\"center\"> \t\t<img align=\"center\" width=\"180\" height=\"180\" alt=\"\" src=\"https://github.com/cometchat-pro/ios-swift-chat-app/blob/master/Screenshots/CometChat%20Logo.png\">\t \t\t</p>\t \t</div>\t </div>",
+  "description": "Algorithm playground application with group chatting, video, audio and general individual chat messaging capabilities. This Algochat application was primarily programmed with the React JS framework, Pusher and CometChat and was developed by Lisa Gorewit-Decker.",
   "main": "webpack.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -24,9 +24,9 @@
     "babel-plugin-react-transform": "^3.0.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
-    "caniuse-lite": "^1.0.30000975",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "caniuse-lite": "^1.0.30000975",
     "css-loader": "^1.0.1",
     "file-loader": "^3.0.1",
     "raw-loader": "^1.0.0",
