--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,6 @@
 {
-  "presets": [
-  	"@babel/env", 
-  	"@babel/react",
-  ],
+  "presets": ["@babel/preset-env", "@babel/preset-react"],
+
   "plugins": [
   		"react-html-attrs", 
        "@babel/plugin-transform-react-inline-elements",
