--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@babel/preset-env": "^7.2.0",
     "@babel/preset-react": "^7.0.0",
     "babel-core": "^6.26.3",
-    "babel-loader": "^8.0.4",
+    "babel-loader": "^8.2.2",
     "babel-plugin-react-html-attrs": "^2.1.0",
     "babel-plugin-react-transform": "^3.0.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
@@ -32,9 +32,9 @@
     "raw-loader": "^1.0.0",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
-    "webpack": "^4.27.0",
+    "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.1"
   },
   "dependencies": {
     "@cometchat-pro/chat": "^1.8.6-beta",
@@ -42,12 +42,13 @@
     "@fortawesome/free-brands-svg-icons": "^5.5.0",
     "@fortawesome/free-solid-svg-icons": "^5.5.0",
     "@fortawesome/react-fontawesome": "^0.1.3",
-    "axios": "^0.19.0",
+    "axios": ">=0.21.1",
     "babel": "^6.23.0",
     "codemirror": "^5.48.2",
     "elliptic": "^6.5.3",
     "http-proxy": "^1.18.1",
     "immutability-helper": "^2.9.0",
+    "ini": "^2.0.0",
     "kind-of": "^6.0.3",
     "minimist": "^1.2.5",
     "node-forge": "^0.10.0",
